src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;


@layer base {
  @font-face {
    font-family: 'Neue Montreal';
    src: url('$lib/assets/fonts/PPNeueMontreal-Thin.woff2');
    font-weight: 100;
    font-display: swap;
  }

  @font-face {
    font-family: 'Neue Montreal';
    src: url('$lib/assets/fonts/PPNeueMontreal-Regular.woff2');
    font-weight: 400;
    font-display: swap;
  }

  @font-face {
    font-family: 'Neue Montreal';
    src: url('$lib/assets/fonts/PPNeueMontreal-Bold.woff2');
    font-weight: 800;
    font-display: swap;
  }

  @font-face {
    font-family: 'Editorial Old';
    src: url('$lib/assets/fonts/PPEditorialOld-Italic.woff2');
    font-weight: 400;
    font-display: swap;
  }

  /* Avoid Chrome to see Safari hack */
  @supports (-webkit-touch-callout: none) {
    body {
      /* Fix vh issue on Safari */
      height: -webkit-fill-available;
    }
  }

  html,
  body {
    -moz-osx-font-smoothing: grayscale; /*(For Firefox)*/
    -webkit-font-smoothing: antialiased; /*(For Chrome and Safari)*/
    color: #1c1c1c;
    font-family: 'Neue Montreal', sans-serif;
  }

  html.lenis {
    height: auto;
  }

  .lenis.lenis-smooth {
    scroll-behavior: auto;
  }

  .lenis.lenis-smooth [data-lenis-prevent] {
    overscroll-behavior: contain;
  }

  .lenis.lenis-stopped {
    overflow: hidden;
  }

  .lenis.lenis-scrolling iframe {
    pointer-events: none;
  }

  .serif {
    font-family: 'Editorial Old', serif;
  }
}

@layer components {
  h1 {
    font-weight: 800;
  }

  .wrapper {
    margin: 0 auto;
    padding: 60px 120px;
    height: 100dvh;
    max-width: 100%;
  }

}

